--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "geocoder": "spatie/geocoder",
+    "moment": "^2.24.0",
     "nuxt": "^2.8.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
