--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^8.0.0",
     "geocoder": "spatie/geocoder",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "nuxt": "^2.8.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
